--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-sound": "^1.2.0",
+    "react-use-window-sessionstorage": "^1.0.9",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
